src/metrics/snapshots/big_code_analysis__metrics__npa__tests__rust_impl_associated_consts_are_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2.0,
  "interfaces": 0.0,
  "class_attributes": 4.0,
  "interface_attributes": 0.0,
  "class_cda": 0.5,
  "interface_cda": 0.0,
  "total": 2.0,
  "total_attributes": 4.0,
  "cda": 0.5
}
