src/metrics/snapshots/big_code_analysis__metrics__npa__tests__rust_multiple_impls_aggregate.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 1,
  "interfaces": 0,
  "class_attributes": 2,
  "interface_attributes": 0,
  "class_cda": 0.5,
  "interface_cda": 0.0,
  "total": 1,
  "total_attributes": 2,
  "cda": 0.5
}
