src/metrics/snapshots/big_code_analysis__metrics__npa__tests__rust_struct_fields_are_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2,
  "interfaces": 0,
  "class_attributes": 3,
  "interface_attributes": 0,
  "class_cda": 0.6666666666666666,
  "interface_cda": 0.0,
  "total": 2,
  "total_attributes": 3,
  "cda": 0.6666666666666666
}
