src/metrics/snapshots/big_code_analysis__metrics__npa__tests__tsx_visibility_modifiers.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 1,
  "interface_npa_sum": 0,
  "class_attributes": 3,
  "interface_attributes": 0,
  "class_cda": 0.3333333333333333,
  "interface_cda": 0.0,
  "total": 1,
  "total_attributes": 3,
  "cda": 0.3333333333333333
}
