src/metrics/snapshots/big_code_analysis__metrics__npa__tests__typescript_getters_setters_not_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 0.0,
  "interfaces": 0.0,
  "class_attributes": 1.0,
  "interface_attributes": 0.0,
  "classes_average": 0.0,
  "interfaces_average": null,
  "total": 0.0,
  "total_attributes": 1.0,
  "average": 0.0
}
