src/metrics/snapshots/big_code_analysis__metrics__npa__tests__typescript_nested_class_attributes_independent.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 4.0,
  "interfaces": 0.0,
  "class_attributes": 4.0,
  "interface_attributes": 0.0,
  "class_cda": 1.0,
  "interface_cda": 0.0,
  "total": 4.0,
  "total_attributes": 4.0,
  "cda": 1.0
}
